# raman-spectroscopy

./: README.md  launcher.command  mac_launcher.command  manifest.json  requirements.txt  setup.cfg  updater.py  windows_launcher.bat
assets/demo/: example_spectrum.txt
raman_dpid/: commands.py  config.json  discretize.py  gui.py  main.py  plots.py  utils.py
v1.0.1/: discretize.py  plots.py
v1.0.2/: discretize.py  gui.py  utils.py
v1.0.3/: commands.py  config.json  discretize.py  gui.py  plots.py  spectra.py
v1.1.0/: config.json  gui.py  utils.py
v1.1.1/: commands.py  config.json  gui.py  plots.py  utils.py  whats_new.py
