[metadata]
name = raman-dpid
version = 1.3.0
author = Ari Essunfeld, Jade Comellas
author_email = ariessunfeld@gmail.com, comellas@hawaii.edu
description = A tool for visualizing, processing, and identifying raman spectra.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy==1.26.4
    babel==2.13.0
    docopt==0.6.2
    flask-markdown==0.3
    frozen-flask==0.18
    gevent==23.9.1
    humanize==4.8.0
    pyqt6==6.5.2
    pyqtgraph==0.13.3
    pyspectra==0.0.1.2
    pyyaml==6.0.1
    requests==2.31.0
    scikit-learn==1.3.1
    tqdm==4.66.1
    lmfit==1.3.2

[options.entry_points]
console_scripts =
    raman-dpid=raman_dpid.main:main

[options.package_data]
raman-dpid=config.json

